# wpcb-threshold-strategies

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: split_manifest.json  wpcb_efa_priority.yaml
docs/: experiment-log.md
experiments/: resume_yolov10_dslr_iter3.sh  run_canonical_evals.sh  run_canonical_evals_v3.sh  run_dslr_evals_v3.sh  run_rtdetr_l_baseline.sh  run_rtdetr_l_dslr_adaptive.sh  run_rtdetr_l_dslr_progressive.sh  run_rtdetr_l_dslr_static.sh  run_rtdetr_l_gen1_adaptive.sh  run_rtdetr_l_gen1_progressive.sh  run_rtdetr_l_gen1_static.sh  run_rtdetr_l_noisy_gen0.sh  run_rtdetr_l_noisy_st_adaptive.sh  run_rtdetr_l_noisy_st_progressive.sh  run_rtdetr_l_noisy_st_static.sh  run_rtdetr_x_baseline.sh  run_rtdetr_x_gen1_adaptive.sh  run_rtdetr_x_gen1_progressive.sh  run_rtdetr_x_gen1_static.sh  run_rtdetr_x_noisy_gen0.sh  run_rtdetr_x_noisy_st_adaptive.sh  run_rtdetr_x_noisy_st_progressive.sh  run_rtdetr_x_noisy_st_static.sh  run_wpcb_efa.sh  run_yolo12_dslr_adaptive_v3.sh  run_yolo12_dslr_pathA_adaptive_v3.sh  run_yolo12_dslr_pathA_clean_probe_v3.sh  run_yolo12_dslr_pathA_clean_static_probe_v3.sh  run_yolo12_dslr_pathA_probe_v3.sh  run_yolo12_dslr_pathA_progressive_v3.sh  run_yolo12_dslr_pathA_static_probe_v3.sh  run_yolo12_dslr_pathA_static_v3.sh  run_yolo12_dslr_progressive_v3.sh  run_yolo12_dslr_static_v3.sh  run_yolo12_noisy_gen0.sh  run_yolo12_noisy_gen0_v3.sh  run_yolo12_noisy_st_adaptive.sh  run_yolo12_noisy_st_adaptive_v3.sh  run_yolo12_noisy_st_progressive.sh  run_yolo12_noisy_st_progressive_v3.sh  (+48 more)
(+82 files in other folders)
