[project]
name = "wpcb-threshold-strategies"
version = "0.1.0"
description = "Adaptive and Federated Self-Generated Labeling for Waste PCB Detection"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "scipy>=1.11.0",
    "ultralytics>=8.2.0",
    "wandb>=0.16.0",
    "albumentations>=1.3.0",
    "pycocotools>=2.0.7",
    "supervision>=0.18.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = ["pytest>=8.0", "python-docx>=1.1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
